Adicionar script init-db-render no package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "init-db": "node scripts/init-db.js",
+    "init-db-render": "node init-db-render.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["api", "doces", "pedidos", "rest"],
