Corrigir configuração do Vercel - usar rewrites em vez de routes

--- a/vercel.json
+++ b/vercel.json
@@ -10,14 +10,14 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/src/(.*)",
-      "dest": "/src/$1"
+      "source": "/src/(.*)",
+      "destination": "/src/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "source": "/(.*)",
+      "destination": "/$1"
     }
   ],
   "headers": [
